--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,24 @@
-# cloudbuild.yaml
-# Build a React app and serve it with Nginx using Docker
 steps:
   # Step 1: Build the Docker image
-  - name: 'us-central1-docker.pkg.dev/salam-378510/salam-builds/react-app:latest'
-    args: ['build', '-t', 'salam-builds/salam-378510/react-app', '.']
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'build',
+        '-t',
+        'us-central1-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest',
+        '.'
+      ]
 
-# Push the Docker image to Artifact Registry or Container Registry
+  # Step 2: Push the image to Artifact Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'push',
+        'us-central1-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest'
+      ]
+
 images:
-  - 'us-central1-docker.pkg.dev/salam-378510/salam-builds/react-app:latest'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest'
 
-# Use your custom service account (replace with your actual SA email)
-serviceAccount: projects/salam-378510/serviceAccounts/cloud-build-sa@salam-378510.iam.gserviceaccount.com
-
-# Logging option to satisfy Cloud Build requirements
 options:
   logging: CLOUD_LOGGING_ONLY
