--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,8 @@
+substitutions:
+  _VM_NAME: "gcp-stg-app-01"
+  _VM_ZONE: "me-central2-c"
+  _IMAGE_NAME: "me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app"
+
 steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
@@ -5,26 +10,18 @@ steps:
       [
         'build',
         '-t',
-        'me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:$SHORT_SHA',
+        '$_IMAGE_NAME:$SHORT_SHA',
         '-t',
-        'me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest',
+        '$_IMAGE_NAME:latest',
         '.'
       ]
 
-  # Step 2: Push the image to Artifact Registry
+  # Step 2: Push the images to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'push',
-        'me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:$SHORT_SHA'
-      ]
+    args: ['push', '$_IMAGE_NAME:$SHORT_SHA']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'push',
-        'me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest'
-      ]
+    args: ['push', '$_IMAGE_NAME:latest']
 
   # Step 3: SSH into VM and deploy with docker-compose
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -32,19 +29,15 @@ steps:
     args:
       - -c
       - |
-        VM_NAME="gcp-stg-app-01"
-        VM_ZONE="me-central2-c"
-        IMAGE="me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest"
-
-        echo ">>> Connecting to VM: $VM_NAME in $VM_ZONE"
-        gcloud compute ssh $VM_NAME --zone $VM_ZONE --tunnel-through-iap --command "
+        echo ">>> Connecting to VM: $_VM_NAME in $_VM_ZONE"
+        gcloud compute ssh $_VM_NAME --zone $_VM_ZONE --tunnel-through-iap --command "
           mkdir -p ~/deploy && cd ~/deploy
           echo '>>> Writing docker-compose.yml'
           cat > docker-compose.yml <<EOF
           version: '3.8'
           services:
             react-app:
-              image: $IMAGE
+              image: $_IMAGE_NAME:latest
               ports:
                 - '8080:8080'
               restart: unless-stopped
@@ -58,8 +51,8 @@ steps:
         "
 
 images:
-  - 'me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:$SHORT_SHA'
-  - 'me-central2-docker.pkg.dev/$PROJECT_ID/salam-builds/react-app:latest'
+  - '$_IMAGE_NAME:$SHORT_SHA'
+  - '$_IMAGE_NAME:latest'
 
 options:
   logging: CLOUD_LOGGING_ONLY
